deploy/kustomize/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - proxy.app.com
      secretName: proxy-app-tls

  rules:
    - host: proxy.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 80
